--- a/index.html
+++ b/index.html
@@ -9,20 +9,59 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1><span>S</span><span>u</span><span>p</span><span>e</span><span>r</span><br><span>M</span><span>a</span><span>r</span><span>i</span><span>o</span> <span>T</span><span>o</span><span>p</span> <span>1</span><span>0</span></h1>
+    <h1>
+        <span>
+            <span>S</span><span>u</span><span>p</span><span>e</span><span>r</span><br><span>M</span><span>a</span><span>r</span><span>i</span><span>o</span> <span>T</span><span>o</span><span>p</span> <span>1</span><span>0</span></h1>
+        </span>
     <ol>
-        <li>Super Mario World</li>
-        <li>Super Mario Galaxy</li>
-        <li>Super Mario Galaxy 2</li>
-        <li>Super Mario 64</li>
-        <li>Super Mario Bros. 3</li>
-        <li>Super Mario Bros.</li>
-        <li>Super Mario Bros. 2 (JP)</li>
-        <li>Yoshi's Island</li>
-        <li>Super Mario 3D Land</li>
-        <li>Super Mario Land</li>
-        <li>Super Mario Sunshine</li>
-        <li>Super Mario Bros. 2 (EU)</li>
+        <li>
+            <span><span><span><span></span></span></span></span>
+            <span>Super Mario World</span>
+        </li>
+        <li>
+            <span><span><span><span></span></span></span></span>
+            <span>Super Mario Galaxy</span>
+        </li>
+        <li>
+            <span><span><span><span></span></span></span></span>
+            <span>Super Mario Galaxy 2</span>
+        </li>
+        <li>
+            <span><span><span><span></span></span></span></span>
+            <span>Super Mario 64</span>
+        </li>
+        <li>
+            <span><span><span><span></span></span></span></span>
+            <span>Super Mario Bros. 3</span>
+        </li>
+        <li>
+            <span><span><span><span></span></span></span></span>
+            <span>Super Mario Bros.</span>
+        </li>
+        <li>
+            <span><span><span><span></span></span></span></span>
+            <span>Super Mario Bros. 2 (JP)</span>
+        </li>
+        <li>
+            <span><span><span><span></span></span></span></span>
+            <span>Yoshi's Island</span>
+        </li>
+        <li>
+            <span><span><span><span></span></span></span></span>
+            <span>Super Mario 3D Land</span>
+        </li>
+        <li>
+            <span><span><span><span></span></span></span></span>
+            <span>Super Mario Land</span>
+        </li>
+        <li>
+            <span><span><span><span></span></span></span></span>
+            <span>Super Mario Sunshine</span>
+        </li>
+        <li>
+            <span><span><span><span></span></span></span></span>
+            <span>Super Mario Bros. 2 (EU)</span>
+        </li>
     </ol>
 </body>
 </html>
