complete mario madness

--- a/index.html
+++ b/index.html
@@ -10,58 +10,60 @@
 </head>
 <body>
     <h1>
-        <span>
-            <span>S</span><span>u</span><span>p</span><span>e</span><span>r</span><br><span>M</span><span>a</span><span>r</span><span>i</span><span>o</span> <span>T</span><span>o</span><span>p</span> <span>1</span><span>0</span></h1>
-        </span>
-    <ol>
-        <li>
-            <span><span><span><span></span></span></span></span>
-            <span>Super Mario World</span>
-        </li>
-        <li>
-            <span><span><span><span></span></span></span></span>
-            <span>Super Mario Galaxy</span>
-        </li>
-        <li>
-            <span><span><span><span></span></span></span></span>
-            <span>Super Mario Galaxy 2</span>
-        </li>
-        <li>
-            <span><span><span><span></span></span></span></span>
-            <span>Super Mario 64</span>
-        </li>
-        <li>
-            <span><span><span><span></span></span></span></span>
-            <span>Super Mario Bros. 3</span>
-        </li>
-        <li>
-            <span><span><span><span></span></span></span></span>
-            <span>Super Mario Bros.</span>
-        </li>
-        <li>
-            <span><span><span><span></span></span></span></span>
-            <span>Super Mario Bros. 2 (JP)</span>
-        </li>
-        <li>
-            <span><span><span><span></span></span></span></span>
-            <span>Yoshi's Island</span>
-        </li>
-        <li>
-            <span><span><span><span></span></span></span></span>
-            <span>Super Mario 3D Land</span>
-        </li>
-        <li>
-            <span><span><span><span></span></span></span></span>
-            <span>Super Mario Land</span>
-        </li>
-        <li>
-            <span><span><span><span></span></span></span></span>
-            <span>Super Mario Sunshine</span>
-        </li>
-        <li>
-            <span><span><span><span></span></span></span></span>
-            <span>Super Mario Bros. 2 (EU)</span>
-        </li>
-    </ol>
+        <span><span>S</span><span aria-hidden="true">s</span><span aria-hidden="true">s</span></span><span><span>u</span><span aria-hidden="true">u</span><span aria-hidden="true">u</span></span><span><span>p</span><span aria-hidden="true">p</span><span aria-hidden="true">p</span></span><span><span>e</span><span aria-hidden="true">e</span><span aria-hidden="true">e</span></span><span><span>r</span><span aria-hidden="true">r</span><span aria-hidden="true">r</span></span><br><span><span>M</span><span aria-hidden="true">M</span><span aria-hidden="true">M</span></span><span><span>a</span><span aria-hidden="true">A</span><span aria-hidden="true">A</span></span><span><span>r</span><span aria-hidden="true">R</span><span aria-hidden="true">R</span></span><span><span>i</span><span aria-hidden="true">I</span><span aria-hidden="true">I</span></span><span><span>o</span><span aria-hidden="true">O</span><span aria-hidden="true">O</span></span><br><span><span>T</span><span aria-hidden="true">T</span><span aria-hidden="true">T</span></span><span><span>o</span><span aria-hidden="true">O</span><span aria-hidden="true">O</span></span><span><span>p</span><span aria-hidden="true">P</span><span aria-hidden="true">P</span></span><span><span>1</span><span aria-hidden="true">1</span><span aria-hidden="true">1</span></span><span><span>0</span><span aria-hidden="true">0</span><span aria-hidden="true">0</span></span>
+    </h1>
+    <main>
+        <div></div>
+        <ol>
+            <li>
+                <span><span><span><span></span></span></span></span>
+                <span>Super Mario World</span>
+            </li>
+            <li>
+                <span><span><span><span></span></span></span></span>
+                <span>Super Mario Galaxy</span>
+            </li>
+            <li>
+                <span><span><span><span></span></span></span></span>
+                <span>Super Mario Galaxy 2</span>
+            </li>
+            <li>
+                <span><span><span><span></span></span></span></span>
+                <span>Super Mario 64</span>
+            </li>
+            <li>
+                <span><span><span><span></span></span></span></span>
+                <span>Super Mario Bros. 3</span>
+            </li>
+            <li>
+                <span><span><span><span></span></span></span></span>
+                <span>Super Mario Bros.</span>
+            </li>
+            <li>
+                <span><span><span><span></span></span></span></span>
+                <span>Super Mario Bros. 2 (JP)</span>
+            </li>
+            <li>
+                <span><span><span><span></span></span></span></span>
+                <span>Yoshi's Island</span>
+            </li>
+            <li>
+                <span><span><span><span></span></span></span></span>
+                <span>Super Mario 3D Land</span>
+            </li>
+            <li>
+                <span><span><span><span></span></span></span></span>
+                <span>Super Mario Land</span>
+            </li>
+            <li>
+                <span><span><span><span></span></span></span></span>
+                <span>Super Mario Sunshine</span>
+            </li>
+            <li>
+                <span><span><span><span></span></span></span></span>
+                <span>Super Mario Bros. 2 (EU)</span>
+            </li>
+        </ol>
+    </main>
 </body>
 </html>
