--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
             </li>
             <li class="hidden">
                 <span><span><span><span></span></span></span></span>
-                <span>Super Mario Galaxy</span>
-            </li>
-            <li class="hidden">
-                <span><span><span><span></span></span></span></span>
-                <span>Super Mario Galaxy 2</span>
-            </li>
-            <li class="hidden">
-                <span><span><span><span></span></span></span></span>
                 <span>Super Mario 64</span>
             </li>
             <li class="hidden">
                 <span><span><span><span></span></span></span></span>
+                <span>Super Mario Galaxy</span>
+            </li>
+            <li class="hidden">
+                <span><span><span><span></span></span></span></span>
                 <span>Super Mario Bros. 3</span>
+            </li>
+            <li class="hidden">
+                <span><span><span><span></span></span></span></span>
+                <span>Super Mario Galaxy 2</span>
             </li>
             <li class="hidden">
                 <span><span><span><span></span></span></span></span>
@@ -55,27 +55,24 @@
                 <span><span><span><span></span></span></span></span>
                 <span>Super Mario Land</span>
             </li>
-            <li class="hidden">
-                <span><span><span><span></span></span></span></span>
-                <span>Super Mario Sunshine</span>
-            </li>
-            <li class="hidden">
-                <span><span><span><span></span></span></span></span>
-                <span>Super Mario Bros. 2 (EU)</span>
-            </li>
         </ol>
     </main>
+
     <script>
         var liCollection = document.getElementsByTagName('li');
-        var audioContext;
-        var samples;
-
-        const samplePaths = ['./smw_kick.wav', './smw_riding_yoshi.wav'];
-
-        audioContext = new AudioContext();
-        setupSamples(samplePaths).then((response) => {
-            samples = response;
-        });
+        var audio = new Audio();
+        var fileArray = [
+            './audio/smw_pipe.wav',
+            './audio/smw_jump.wav',
+            './audio/smw_kick.wav',
+            './audio/smw_coin.wav',
+            './audio/smw_dragon_coin.wav',
+            './audio/smw_egg_hatching.wav',
+            './audio/smw_power-up_appears.wav',
+            './audio/smw_power-up.wav',
+            './audio/smw_1-up.wav',
+            './audio/smw_midway_gate.wav'
+        ];
 
         document.body.addEventListener('click', function() {
             for (let i = liCollection.length - 1; i >= 0; i--) {
@@ -89,41 +86,44 @@
         });
 
         function play(index) {
-            var kick = document.getElementById('kick');
-            var ride = document.getElementById('ride');
+            let file;
 
             switch (index) {
+                case 0:
+                    file = fileArray[9];
+                    break;
+                case 1:
+                    file = fileArray[8];
+                    break;
                 case 2:
-                    playSample(samples[0], 0);
+                    file = fileArray[7];
+                    break;
+                case 3:
+                    file = fileArray[6];
+                    break;
+                case 4:
+                    file = fileArray[5];
+                    break;
+                case 5:
+                    file = fileArray[4];
+                    break;
+                case 6:
+                    file = fileArray[3];
+                    break;
+                case 7:
+                    file = fileArray[2];
+                    break;
+                case 8:
+                    file = fileArray[1];
                     break;
                 default:
-                    playSample(samples[1], 0);
-            }
-        }
-
-        async function getAudioFile(path) {
-            const response = await fetch(path);
-            const arrayBuffer = await response.arrayBuffer();
-            const audioBuffer = await audioContext.decodeAudioData(arrayBuffer);
-            return audioBuffer;
-        }
-
-        async function setupSamples(paths) {
-            const audioBuffers = [];
-
-            for (const path of paths) {
-                const sample = await getAudioFile(path);
-                audioBuffers.push(sample);
+                    file = fileArray[0];
             }
 
-            return audioBuffers;
-        }
-
-        function playSample(audioBuffer, time) {
-            const sampleSource = audioContext.createBufferedSource();
-            sampleSource.buffer = audioBuffer;
-            sampleSource.connect(audioContext.destination);
-            sampleSource.start(time);
+            audio.src = file;
+            audio.play().catch((e) => {
+                // supress
+            });
         }
     </script>
 </body>
