Apparently periods look like apostrophes in this font

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </li>
             <li class="hidden">
                 <span><span><span><span></span></span></span></span>
-                <span>Yoshi's Island</span>
+                <span>Yoshi.s Island</span>
             </li>
             <li class="hidden">
                 <span><span><span><span></span></span></span></span>
